# extract_video_features

./: .gitignore  CMakeLists.txt  accessDirectory.h  em_algorithm_color_subtraction.cpp  extract20HsvFeatures.cpp  extract4608HsvFeatures.cpp  extract60ColorThemes.cpp  extract768BgrFeatures.cpp  extract768ColorHistogram.cpp  extract768HsvFeatures.cpp  extract768LabFeatures.cpp  extract80HsvFeatures.cpp  extract_20hsv_features.cpp  extract_4608hsv_features.cpp  extract_512color_histogram.cpp  extract_768color_histogram.cpp  extract_80hsv_features.cpp  extract_color_themes.cpp  extract_video_features_funcs.h  functions.h  k-means_color_subtraction.cpp  kMeansColorSubtraction.cpp  main.cpp  selectPrincipalColorThemes.cpp
